# velt-integration-python

./: .gitignore  LICENSE  README.md  __init__.py  config.py  exceptions.py  pyproject.toml  sdk.py  setup.py
.github/workflows/: ci.yml
backends/: __init__.py  self_hosting_backend.py
database/: __init__.py  base.py  connection.py  mongodb_adapter.py
models/: __init__.py  attachment.py  base.py  comment.py  enums.py  reaction.py  user.py
services/: __init__.py
services/api/: __init__.py  token_service.py
services/self_hosting/: __init__.py  attachment_service.py  base_service.py  comment_service.py  reaction_service.py  user_service.py
tests/: __init__.py  attachment_service_Test.py  comment_service_Test.py  conftest.py  database_Test.py  reaction_service_Test.py  sdk_Test.py  test_utils.py  token_service_Test.py  user_service_Test.py
