[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "velt-integration"
version = "0.1.0"
description = "Python SDK for integrating Velt comments, reactions, attachments, and user management into Django applications"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Velt", email = "support@velt.dev"}
]
keywords = ["velt", "comments", "collaboration", "django", "mongodb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
]

dependencies = [
    "pymongo[tls,srv]==4.6.3",
    "mongoengine==0.27.0",
    "blinker==1.8.2",
    "python-dateutil==2.8.2",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mongomock>=4.1.2",
    "responses>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["velt_integration*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]

